--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Chris-Merced/Classic-Messenger-App-Backend#readme",
   "dependencies": {
+    "argon2": "^0.41.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.13.1",
     "ws": "^8.18.0"
   }
 }
