--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
