--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Backend infrastructure to support a rendition of a classic messenger application",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest --detectOpenHandles"
+    "start": "node index.js",
+    "test": "npx jest --detectOpenHandles",
+    "dev": "NODE_ENV=development node index.js"
   },
   "repository": {
     "type": "git",
