--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "^7.4.1",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
