--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "file-type": "^20.4.1",
+    "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
+    "sharp": "^0.34.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
