--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Chris-Merced/Classic-Messenger-App-Backend#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "argon2": "^0.41.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "sharp": "^0.34.1",
+    "uuid": "^11.1.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
