--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.5",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0",
