--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
 }
