--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
+    "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0",
