--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.5",
     "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
