--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
+  },
+  "engines": {
+    "node": "18.19.1",
+    "npm": "9.2.0"
   }
 }
