--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
